--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,67 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --text: black;
+  --background: #e0e0e0;
+  /* پس‌زمینه روشن برای نیومورفیسم */
+  --neu-shadow1: #bababa;
+  --neu-shadow2: #ffffff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.dark {
+  --background: #2b2b2b;
+  /* خاکستری تیره برای دارک مود */
+  --text: white;
+  --neu-shadow1: #1a1a1a;
+  /* سایه تیره‌تر */
+  --neu-shadow2: #3c3c3c;
+  /* سایه روشن‌تر */
 }
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-weight: 200;
+}
+
+html,
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--background);
+  color: var(--text);
+  max-width: 1400px;
+  overflow-x: hidden;
+  margin: auto;
+  padding: 0 20px;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+a {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+  color: var(--text);
+}
+
+button,
+input,
+textarea {
+  color: var(--text);
+  font-family: inherit;
+}
+
+
+.neumorphic {
+  background-color: var(--background);
+  box-shadow: 5px 5px 9px var(--neu-shadow1), -5px -5px 9px var(--neu-shadow2);
+  transition: all 0.3s ease;
+}
+
+.neumorphics {
+  background-color: var(--background);
+  box-shadow: 5px 5px 9px var(--neu-shadow1), -5px -5px 9px var(--neu-shadow2);
+  transition: all 0.3s ease;
+}
+
+.neumorphic:hover {
+  box-shadow: inset 3px 3px 6px var(--neu-shadow1), inset -3px -3px 6px var(--neu-shadow2);
 }
